--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,13 @@
 {
-  "name": "halal",
-  "version": "0.1",
-  "app": {
-    "launch":{
-      "local_path": "index.html"
-    }
-  },
-  "icons": {
-    "128": "icon.png"
-  }
+    "name": "halal",
+    "xwalk_version": "0.1",
+    "xwalk_description": "Application for internal halal audit",
+    "start_url": "index.html",
+    "icons": [
+        {
+          "src": "img/icon.png",
+          "sizes": "128x128",
+          "type": "image/png"
+        }
+    ]
 }
